refactoring the rest of the code and finalizing the custom repository